--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body {
   border-radius: 32px;
   box-shadow: var(--shadow-card);
   max-width: 1100px;
-  margin: 0 auto 60px auto;
+  margin: 0 auto 120px auto;
   padding: 24px 38px 38px 38px;
   position: relative;
   z-index: 2;
@@ -440,8 +440,8 @@ body {
 /* 页脚 */
 .footer {
   background: #f5f4ff;
-  padding: 48px 0 20px 0;
-  margin-top: 32px;
+  padding: 12px 0 12px 0;
+  margin-top: 0px;
 }
 .footer-content {
   max-width: 1080px;
@@ -472,11 +472,12 @@ body {
   color: var(--primary-accent);
   opacity: 1;
 }
-.footer-copy {
+/* .footer-copy {
   color: #aaa;
   font-size: 0.97rem;
   margin-top: 8px;
-}
+} */
+ 
 @media (max-width: 900px) {
   .footer-content {
     padding: 0 8px;
